# roleplay-engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.from-git  README.md  SRD.md  deploy-hf.sh  index.html  nginx.conf  style.css
backend/: Cargo.toml
backend/src/: db.rs  error.rs  llm.rs  main.rs  state.rs
backend/src/routes/: characters.rs  chats.rs  health.rs  messages.rs  mod.rs  settings.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: api.rs  character.rs  chat.rs  chats.rs  create.rs  header.rs  home.rs  main.rs  markdown.rs  persona.rs  settings.rs  stream.rs  theme.rs  upload.rs  util.rs
shared/src/: card.rs  dto.rs  lib.rs  template.rs  types.rs
src/: api.rs  character.rs  chat.rs  create.rs  data.rs  header.rs  home.rs  main.rs  persona.rs  settings.rs  types.rs
