[package]
name = "roleplay-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Element"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
