[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
tower-http = { version = "0.6", features = ["fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
