[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Element", "HtmlElement", "HtmlInputElement", "File", "FileList", "FileReader"] }
